tests/ok/inputs/traffic3.obc
node traffic3() returns (color: int)
guarantee G( {color} = {0} => X( {color} = {1} ) );
guarantee G( {color} = {1} => X( {color} = {2} ) );
guarantee G( {color} = {2} => X( {color} = {0} ) );
locals
states
  Green, Yellow, Red;
init Green
trans
  Green -> Yellow {
    color := 0;
  }
  Yellow -> Red {
    color := 1;
  }
  Red -> Green {
    color := 2;
  }
end
